--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   reporter:
-    image: opentraffic/reporter:wb_demo
+    image: opentraffic/reporter:latest
     networks:
       - opentraffic
     ports:
@@ -36,7 +36,7 @@ services:
     container_name: kafka
 
   valhalla:
-    image: valhalla/docker:wb_demo
+    image: valhalla/docker:1.2.4
     ports:
       - "8002:8002"
     volumes:
